tests/deriving/should_run/drvrun007.hs
module Main( main ) where
-- This one crashed Hugs98

data X = X | X :\ X  deriving Show

main = putStrLn (show (X :\ X))
