tests/deriving/should_fail/T23522.hs
module T23522 where

type F x = Show x

data Proposition = Proposition deriving (F)
